make header position sticky instead of fixed, so that the table doesn't go behind it (and so we don't need to add padding)

--- a/web/style/date.css
+++ b/web/style/date.css
@@ -1,5 +1,5 @@
 .page-header {
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100%;
     height: var(--header_height);
