--- a/web/style/table.css
+++ b/web/style/table.css
@@ -1,7 +1,6 @@
 /* whole table */
 
 .results-table {
-    padding-top: var(--header_height);
     width: 100%;
     margin: auto;
     text-align: center;
